--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- navbar end  -->
 
 <!-- hero section start  -->
-<main class="pt-5">
+<main>
   <div class="container">
     <div class="hero d-flex flex-column flex-lg-row  justify-content-lg-between justify-content-center align-items-lg-center ">
       <div class="content col-lg-6">
